# remarx

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPERNOTES.md  README.md  alignment_sentence_pairs.csv  codecov.yml  convert_xml.py  display_passim_pairs.ipynb  display_passim_results_backup.ipynb  index.html  mkdocs.yml  pyproject.toml  requirements.txt  run_passim_on_texts.ipynb
.github/ISSUE_TEMPLATE/: remarx_software_release.md  software_release.md
.github/workflows/: changelog.yml  check.yml  complexity.yml  documentation.yml  python-publish.yml  test.yml  unit_tests.yml
data/: aggregated_title_mentions.csv  annotation_quotation_citations.csv  candidate_ner.csv  compiled_title_mentions.csv  search_stats.csv  title_mentions_flair_ner.csv  title_mentions_sent_results.csv  title_mentions_subset.csv  title_searchphrases.csv
data/annotation/: 1896-97a.csv  1897-98a.csv  1898-99a.csv  1899-00a.csv  1900-01a.csv  1901-02a.csv
data/candidate_mentions/: README.md  candidate-mentions.slurm  concept_mentions.csv  kapital.csv  manifesto.csv  title_mentions.csv
data/dnz-sample-articles/: Bernstein,_1897__790_Der-Sozialismus-und-die-gewerbliche.txt  Bernstein_Zur_Theorie_des_Arbeitswerth_1899-90a.txt
data/mega-sample-pages/: p147.txt  p25.txt  p395-396.txt  p396.txt  p402.txt
data/model_responses/: quotations.csv  title_mentions.csv
data/passim/: README.md  input.jsonl
data/passim/output/: .gitignore
data/sentence-corpora/: dnz-sample-sents.jsonl  mega-sample-sents.jsonl  title-mentions-sents.jsonl
data/sentence-embeddings/: dnz-sample-sents.npy  mega-sample-sents.npy
data/sentence-eval-pairs/: dnz_marx_sentence_pairs.csv  dnz_quoted_sentences.csv  marx_cited_sentences.csv
data/sentence-pairs/: annoy10-top10.csv  chroma-eval-pairs.csv  chromadb-top10.csv
data/seq2seq/: input_offsets.csv  quotes.csv
data/seq2seq/1896-97aCLEAN_parts_output/: input_offsets.csv  quotes.csv
data/subset/: direct_quotes.csv
data/token-embeddings/: kapital.csv  kapital.npy
docs/: devnotes.md  hooks.py  index.md  performance-metrics.csv  technical-design-document.md  technical-design.md
docs/api/: corpus.md  index.md  sentence.md
exp1/: index.html  quotation-prompting.html
exp2/: index.html
exp2/quotation-review/: index.html
exp3/: eval-chroma.html  index.html  passim-results.html
notebooks/: custom.css  eval-chroma.py  evaluate-candidate-sentences.py  find-quotes.py  highlight.css  passim-results.py  plot-token-embeddings.py  quotation-prompting.py  quotation-review.py  quotation-sentence-ids.py  quote-data.py  review-annotations.py  seq2seq-review.py  test-structured-output.py  title-mentions-demo.py  title_mentions.py  try-annoy.py  try-chroma.py  try-cross-encoder.py  try-ner.py  view-title-responses.py
notebooks/__marimo__/: evaluate-candidate-sentences.html  find-quotes.html  find-quotes.ipynb  plot-token-embeddings.html  quotation-prompting.html  quotation-prompting.ipynb  quote-data.ipynb  test-structured-output.html  test-structured-output.ipynb  title_mentions.html  title_mentions.ipynb  try-annoy.html  try-ner.html  view-title-responses.html
notebooks/ondemand/: README.md  test-app.py
notebooks/public/: direct_quotes_subset.csv  seq2seq_input_offsets.csv  seq2seq_quotes.csv
passim_output/align.json/: .part-00000-27384a20-f5c6-4400-b6ce-316ff339ca76-c000.json.crc  part-00000-563cd3db-1ea1-44d9-abaf-8cb4bc99d42c-c000.json
passim_output/out.json/: .part-00000-128a3fac-7321-4e6b-a876-5d21636f6819-c000.json.crc  .part-00000-b7f2ccd8-ff8a-4282-a853-59be867532d2-c000.json.crc  part-00000-b7f2ccd8-ff8a-4282-a853-59be867532d2-c000.json  part-00000-e1bd3733-54c2-4533-aad9-e400f5265517-c000.json
passim_output/tmp/clusters.parquet/: .part-00000-76f11a63-f31a-4583-8282-9ea99c4f2d8c-c000.snappy.parquet.crc  part-00000-76f11a63-f31a-4583-8282-9ea99c4f2d8c-c000.snappy.parquet
passim_output/tmp/dfpost.parquet/: .part-00000-cfe2edd2-04e9-48f0-86f9-a4464356bfb3-c000.snappy.parquet.crc  .part-00001-cfe2edd2-04e9-48f0-86f9-a4464356bfb3-c000.snappy.parquet.crc  .part-00002-cfe2edd2-04e9-48f0-86f9-a4464356bfb3-c000.snappy.parquet.crc  .part-00003-cfe2edd2-04e9-48f0-86f9-a4464356bfb3-c000.snappy.parquet.crc  .part-00004-cfe2edd2-04e9-48f0-86f9-a4464356bfb3-c000.snappy.parquet.crc  .part-00005-cfe2edd2-04e9-48f0-86f9-a4464356bfb3-c000.snappy.parquet.crc  .part-00006-cfe2edd2-04e9-48f0-86f9-a4464356bfb3-c000.snappy.parquet.crc  .part-00007-cfe2edd2-04e9-48f0-86f9-a4464356bfb3-c000.snappy.parquet.crc  (+20 more)
profiling/: profiling-report-0.3.md
profiling/CPU time/: profile_alto.prof  profile_alto_stanza_optimized.prof  profile_flair_spacy_de.prof  profile_tei.prof  profile_tei_flair_spacy.prof  profile_tei_stanza_optimized.prof
profiling/output_corpus_csv/: tei_sentences_flair.csv  tei_sentences_stanza.csv
prompts/quotations/: basic.txt  one_shot.txt
prompts/title_mentions/: basic.txt  one_shot.txt
scripts/: convert_texts_to_passim_corpus.py  convert_xml.py  get_quote_finder_performance.py  parse_html.py  run_passim.py
scripts/xquery/: continuing-paragraphs.xq
src/remarx/: __init__.py  app.py  app_utils.py  build_sentence_corpus.py  candidate_mentions.py  compile_title_annotations.py  compile_title_mention_annotations.py  eval_knn.py  get_ner_spans.py  get_quotations.py  get_sentence_embeddings.py  get_title_mention_responses.py  get_token_embeddings.py  highlight_utils.py  launch_gui.py  launch_notebook.py  notebook_utils.py  polar_utils.py  review_utils.py  run_xslt.py  sandbox_utils.py  sentence_segmentation.py  tei_page.py  transform_embeddings.py  utils.py
tei-stylesheets/: tei-to-text.xsl
test/: test_app.py  test_review_utils.py  test_sentence_segmentation.py  test_token_embeddings.py
tests/: test_app_utils.py  test_utils.py
tests/test_app/: test_app_utils.py  test_log_viewer.py  test_ui.py  test_utils.py
tests/test_quotation/: test_consolidate.py  test_embeddings.py  test_find_quotes.py  test_pairs.py
tests/test_sentence/: test_embeddings.py  test_segment.py
texts_json_for_passim/: mega_passim.jsonl  mega_texts.jsonl
(+90 files in other folders)
