[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "remarx"
description = "Code for identifying Marx citations associated with the CDH project Citing Marx"
readme = "README.md"
license = { text = "Apache-2" }
authors = [
  { name = "Center for Digital Humanities at Princeton", email = "cdh@princeton.edu" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing",
]
dynamic = [ "version" ]
dependencies = [
  "marimo>=0.13.11",
  "marimo[lsp]",     # marimo language server protocol
  "polars",
  "ruff",
  "stanza",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "remarx[test]",
  "ruff",
]
test = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.version]
path = "src/remarx/__init__.py"

[tool.hatch.metadata]
# So python type stubs can be installed from GitHub (i.e., direct reference)
allow-direct-references = true

[tool.ruff]
# Always generate Python 3.12-compatible code
target-version = "py312"
# Configure src path so ruff import fixes can identify local imports
src = [ "src" ]

lint.select = [
  "ANN",  # flake8-annotations
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "D1",   # pydocstyle: undocumented
  "D201", # pydocstyle: blank-line-before-function
  "D209", # pydocstyle: new-line-after-last-paragraph
  "D213", # pydocstyle: multi-line-summary-second-line
  "D403", # pydocstyle: first-word-uncapitalized
  "D419", # pydocstyle: empty-docstring
  # ruff defaults
  "E4",
  "E7",
  "E9",
  "F",
  # additional rules
  "I",    #isort
  "NPY",  # numpy-specific rules
  "PERF", # perflint
  "PTH",  # flake8-use-pathlib
  "RUF",  # ruff-specific rules
  "SIM",  # flake8-simplify
  "UP",   # pyupgrade
]
# Can use to ignore specific rules within above selection
lint.ignore = [  ]

[tool.pytest.ini_options]
testpaths = [ "test" ]

[tool.marimo.display]
cell_output = "below"
theme = "system"      # honor user preference, including in static html exports

[tool.marimo.runtime]
# Add project source directory to python path
pythonpath = [ "src" ]

[tool.marimo.save]
format_on_save = true

[tool.marimo.diagnostics]
enabled = true

[tool.marimo.experimental]
lsp = true
